Finally fixed issue where whitespace occurred below footer in mobile mode. Re-worked HTML and CSS to correct this across all pages

--- a/mini-projects/mp-1/index/index.css
+++ b/mini-projects/mp-1/index/index.css
@@ -104,10 +104,6 @@ footer {
         align-content: center;
     }
 
-    main {
-        width: 100%;
-    }
-
     #two_columns {
         flex-direction: column;
         width: 100%;
@@ -115,5 +111,13 @@ footer {
 
     #page-wrap {
         width: 100%;
+    }
+
+    main {
+        width: 100%;
+    }
+
+    #primary-content {
+        height: 100vh;
     }
 }
